--- a/src/index.scss
+++ b/src/index.scss
@@ -34,11 +34,11 @@ body {
   background: #f5f5f5;
 }
 
-button{
+button {
   font-family: inherit;
 }
 
-:focus{
+:focus {
   outline: none;
 }
 
@@ -46,4 +46,10 @@ button{
   width: 1em;
   height: 1em;
   display: inline-block;
+}
+
+.clearfix::after {
+  content: '';
+  display: block;
+  clear: both;
 }
